--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                 <h2>Project Outcomes</h2>
                 <ul class="hideContent">
                     <li>
-                        This was a project with specific requirements to build a JavaScript app that could add 
+                        This project had specific requirements to build a JavaScript app that could add 
                         items to a list, remove them, mark them as complete, and also filter them for the user. 
                     </li>
                     <li>
