--- a/cit326/scenario.html
+++ b/cit326/scenario.html
@@ -31,12 +31,14 @@
     </style>
 </head>
 <body>
-    <h1>Weekly Scenario</h1>
+    <h1>CIT326 Weekly Scenario</h1>
     <div>
         <video controls="controls autoplay">
             <source src="scenario.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
+	I just realized I forgot to show the query in my video for the extra column information. Here is a screenshot of the query and the results.
+<img src="columns.png">
     </div>
 </body>
 </html>
