--- a/cit326/scenario.html
+++ b/cit326/scenario.html
@@ -37,7 +37,7 @@
             <source src="scenario.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-	I just realized I forgot to show the query in my video for the extra column information. Here is a screenshot of the query and the results.
+	<br>I just realized I forgot to show the query in my video for the extra column information. Here is a screenshot of the query and the results.
 <img src="columns.png">
     </div>
 </body>
