--- a/cit365/assignments.html
+++ b/cit365/assignments.html
@@ -31,10 +31,10 @@
     </style>
 </head>
 <body>
-    <h1>Week2: Timed Math Quiz</h1>
+    <h1>Week3: MegaDesk</h1>
     <div>
         <video controls="controls autoplay">
-            <source src="mathquiz.mp4" type="video/mp4">
+            <source src="megadesk.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
