--- a/cit365/assignments.html
+++ b/cit365/assignments.html
@@ -31,12 +31,21 @@
     </style>
 </head>
 <body>
-    <h1>Week3: MegaDesk</h1>
+    <h1>Weekly Assignments</h1>
     <div>
+        <h2>Week 3: MegaDesk</h2>
         <video controls="controls autoplay">
             <source src="megadesk.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
+    <div>
+        <h2>Week 2: MathQuiz</h2>
+        <video controls="controls autoplay">
+            <source src="mathquiz.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+
 </body>
 </html>
