--- a/cit365/megadesk.html
+++ b/cit365/megadesk.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CSE365 Assignments</title>
+    <title>CIT365 MegaDesk 2.0</title>
     <style>
         html, body {
             margin: 0px;
