--- a/cit365/assignments.html
+++ b/cit365/assignments.html
@@ -33,6 +33,13 @@
 <body>
     <h1>Weekly Assignments</h1>
     <div>
+        <h2>Week 5: MovieDB</h2>
+        <video controls="controls autoplay">
+            <source src="moviedb.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+    <div>
         <h2>Week 3: MegaDesk</h2>
         <video controls="controls autoplay">
             <source src="megadesk.mp4" type="video/mp4">
