--- a/cit365/bootstrap.html
+++ b/cit365/bootstrap.html
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <h1>Bootstrap Grids</h1>
+    <h1>Extra Credit: Bootstrap Grids</h1>
     <div>
         <h2>Week 8: Bootstrap Grids</h2>
         <video controls="controls autoplay">
