--- a/cit365/assignments.html
+++ b/cit365/assignments.html
@@ -38,7 +38,7 @@
             <source src="corsairuniversity.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-	I didn´t have this when I recorded my video. The fix is in GitHub and a screenshot of what the page looks like when you select an instructor.
+	I didn´t have this when I recorded my video. The fix is in GitHub; here is a screenshot of what the page looks like when you select an instructor now.
 	<img src="select.png" alt="Instructor select">
     </div>
     <div>
