--- a/cit365/assignments.html
+++ b/cit365/assignments.html
@@ -39,7 +39,7 @@
             Your browser does not support the video tag.
         </video>
 	<p>
-I didn´t have this when I recorded my video. The fix is in GitHub now; but here is a screenshot of what the page looks like when you select an instructor.
+I didn´t have the select showing courses or students when I recorded my video. The fix is in GitHub now; and here is a screenshot of what the page looks like when you select an instructor.
 </p>
 	<img src="select.png" alt="Instructor select">
     </div>
