--- a/cit365/assignments.html
+++ b/cit365/assignments.html
@@ -33,6 +33,13 @@
 <body>
     <h1>Weekly Assignments</h1>
     <div>
+        <h2>Week 12: Mobile Development</h2>
+        <video controls="controls autoplay">
+            <source src="maui.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+    <div>
         <h2>Week 11: ASP.NET Core Web API</h2>
         <video controls="controls autoplay">
             <source src="webapi.mp4" type="video/mp4">
