--- a/cit365/assignments.html
+++ b/cit365/assignments.html
@@ -34,6 +34,7 @@
     <h1>Weekly Assignments</h1>
     <div>
         <h2>Week 12: Mobile Development</h2>
+	I created a new repository to hold all of these MAUI apps. Hopefully you saw the invitation to access: https://github.com/blackadder-git/CIT365-W2023-CoxJCMobile 
         <video controls="controls autoplay">
             <source src="maui.mp4" type="video/mp4">
             Your browser does not support the video tag.
