--- a/cit326/scenario.html
+++ b/cit326/scenario.html
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <h1>CIT326 Weekly Scenario</h1>
+    <h1>CIT326 Weekly Scenario (Final Project)</h1>
     <div>
         <video controls="controls autoplay">
             <source src="scenario.mp4" type="video/mp4">
