--- a/cit365/final.html
+++ b/cit365/final.html
@@ -33,12 +33,12 @@
 <body>
     <h1>Sacrament Meeting Planner</h1>
     <div>
-<iframe id="kaltura_player" src="https://cdnapisec.kaltura.com/index.php/extwidget/preview/partner_id/1157612?iframeembed=true&playerId=kaltura_player&entry_id=1_aew0boof&flashvars[streamerType]=auto&amp;flashvars[localizationCode]=en&amp;flashvars[leadWithHTML5]=true&amp;flashvars[sideBarContainer.plugin]=true&amp;flashvars[sideBarContainer.position]=left&amp;flashvars[sideBarContainer.clickToClose]=true&amp;flashvars[chapters.plugin]=true&amp;flashvars[chapters.layout]=vertical&amp;flashvars[chapters.thumbnailRotator]=false&amp;flashvars[streamSelector.plugin]=true&amp;flashvars[EmbedPlayer.SpinnerTarget]=videoHolder&amp;flashvars[dualScreen.plugin]=true&amp;flashvars[Kaltura.addCrossoriginToIframe]=true&amp;&wid=1_eu2e5d6e" width="400" height="285" allowfullscreen webkitallowfullscreen mozAllowFullScreen allow="autoplay *; fullscreen *; encrypted-media *" sandbox="allow-downloads allow-forms allow-same-origin allow-scripts allow-top-navigation allow-pointer-lock allow-popups allow-modals allow-orientation-lock allow-popups-to-escape-sandbox allow-presentation allow-top-navigation-by-user-activation" frameborder="0" title="CSE365 - MegaDesk 2.0"></iframe>
+https://cdnapisec.kaltura.com/index.php/extwidget/preview/partner_id/1157612/uiconf_id/42438192/entry_id/1_movvx2qn/embed/dynamic
     </div>
 
     <div>
         <h2>Supplemental Video</h2>
-When we recorded the ZOOM meeting, my audio wasn´t working properly so this video covers a few things in more depth.
+When we recorded our ZOOM meeting, my audio wasn´t working properly so this video covers a few things in more depth.
         <video controls="controls autoplay">
             <source src="final.mp4" type="video/mp4">
             Your browser does not support the video tag.
