--- a/cit365/final.html
+++ b/cit365/final.html
@@ -44,5 +44,11 @@ When we recorded our ZOOM meeting, my audio wasn´t working properly so this vid
             Your browser does not support the video tag.
         </video>
     </div>
+
+    <div>
+	Screenshot taken during our meeting showing we all participated in the call.
+	<img src="screenshot.png">
+    </div>
+
 </body>
 </html>
