--- a/cit365/final.html
+++ b/cit365/final.html
@@ -46,8 +46,8 @@ When we recorded our ZOOM meeting, my audio wasn´t working properly so this vid
     </div>
 
     <div>
-    	<br>
-	Screenshot taken during our meeting showing we all participated in the call.
+    	<h2>Zoom Screenshot</h2>
+	Taken during our meeting.
 	<br>
 	<img src="screenshot.png">
     </div>
