--- a/cit365/final.html
+++ b/cit365/final.html
@@ -46,9 +46,8 @@ When we recorded our ZOOM meeting, my audio wasn´t working properly so this vid
     </div>
 
     <div>
-    	<h2>Zoom Screenshot</h2>
-	Taken during our meeting.
-	<br>
+    	<h2>Zoom Meeting Screenshot</h2>
+	<br><br><br>
 	<img src="screenshot.png">
     </div>
 
