--- a/cse310/lemonade.html
+++ b/cse310/lemonade.html
@@ -31,7 +31,7 @@
     </style>
 </head>
 <body>
-    <h1>Lemonade Stand</h1>
+    <h1>Kotlin Lemonade Stand</h1>
     <div>
         <video controls="controls autoplay">
             <source src="lemonade.mp4" type="video/mp4">
