--- a/cse310/cookie.html
+++ b/cse310/cookie.html
@@ -37,7 +37,7 @@
             <source src="cookie_app.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-	This video demonstrates the app interacting with the cloud database
+	<h2>This video demonstrates the app interacting with the cloud database</h2>
     </div>
 
     <div>
@@ -45,7 +45,7 @@
             <source src="cookie_code.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-	This video shows the actual code that makes the above act work
+	<h2>This video shows the actual code that makes the above app work</h2>
     </div>
 </body>
 </html>
