--- a/cse310/game.html
+++ b/cse310/game.html
@@ -38,5 +38,13 @@
             Your browser does not support the video tag.
         </video>
     </div>
+
+    <div>
+        <h2>This version is running outside the editor as a windows build. I finished the board and the sound is improved. Still need to work on the game controls.</h2>
+        <video controls="controls autoplay">
+            <source src="play.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>    
 </body>
 </html>
