--- a/vacation/index.html
+++ b/vacation/index.html
@@ -20,7 +20,7 @@
 
         <h2>How many days will we stay?</h2>
 
-        <img src="vacation.png">
+        <img src="images/vacation.png">
     <main>
 </body>
 </html>
