--- a/vacation/index.html
+++ b/vacation/index.html
@@ -9,16 +9,42 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<style>
+ body {
+  text-align: center;
+}
+<style>
+
 </head>
 <body>
     <main>
-        <h2>What will you be doing?</h2>
+	<h1>Resort Fuerteventura Origo Mare</h1>
+<p>
+Fuerteventura, declarada reserva de la biosfera, posee un entorno natural único y con personalidad propia, entre tierra y cráteres, cielo y mar. En este entorno protegido se encuentra nuestro resort, un paraíso especialmente diseñado para las vacaciones. El resort se divide en 5 zonas, compuestas por villas con suites y estudios. La decoración es acogedora, con tonos claros y muebles de madera. Las amplias terrazas te permiten pasar del interior al exterior casi sin darte cuenta.
+La atmósfera volcánica se plasma también en una erupción de actividades deportivas y de animación para todas las edades: hay un sinfín de actividades que hacer en el resort y en los alrededores. Las instalaciones deportivas incluyen pistas de tenis y pádel, una pista de petanca y un minigolf de 18 hoyos. Podrás practicar windsurf, kitesurf, surf y muchas otras actividades en la escuela de surf Yolo Riders.
+</p><p>
+Y los que prefieren el agua dulce podrán pasárselo en grande en el Craterpark. Este espacio acuático con temática volcánica de 5000 m², de los que 1000 m² son zonas acuáticas, lo tiene todo: piscina de olas, toboganes, árbol de agua y piscina infantil. Además, en nuestra piscina climatizada reservada a los adultos reina la calma.
+</p><p>
+Los más pequeños podrán hacer amigos y divertirse en nuestros clubes para niños de 4 a 15 años. También cabe señalar que, para mayor comodidad, el resort cuenta con dos restaurantes, dos snack-bar y un bar abiertos todo el día. Solo queda disfrutar a tope de las vacaciones.
+</p>
 
+        <h2>What will you be doing?</h2>
+Rest by the pool, read, explore ... podrán elegir entre numerosas actividades deportivas, creativas o lúdicas adaptadas a la edad de cada uno. El programa incluye grandes juegos, talleres creativos, danza, canto y mucho más. Nuestros animadores se encargarán de que se los niños se lo pasen lo mejor posible!
+<p>
+El complejo cuenta con 3 clubs, divididos según edad:
+<ul>
+<li>Club infantil para niños - de 4 a 5 años</li>
+<li>Club infantil para niños - de 6 a 11 años</li>
+<li>Club adolescentes – a partir de los 12 años</li>
+</ul>
+</p>
+Horarios: De 10h a 12:30h y de 15h a 17h. (sujeto a posibles variaciones)
 
         <h2>Will we be going shopping?</h2>
-
+Depends on what shops are around ...
 
         <h2>How many days will we stay?</h2>
+Three nights, four days
 
         <img src="images/vacation.png">
     <main>
