--- a/vacation/index.html
+++ b/vacation/index.html
@@ -14,6 +14,7 @@
   text-align: center;
 }
 </style>
+
 </head>
 <body>
     <main>
@@ -26,6 +27,7 @@ Y los que prefieren el agua dulce podrán pasárselo en grande en el Craterpark.
 </p><p>
 Los más pequeños podrán hacer amigos y divertirse en nuestros clubes para niños de 4 a 15 años. También cabe señalar que, para mayor comodidad, el resort cuenta con dos restaurantes, dos snack-bar y un bar abiertos todo el día. Solo queda disfrutar a tope de las vacaciones.
 </p>
+
 
         <h2>What will you be doing?</h2>
 Rest by the pool, read, explore ... podrán elegir entre numerosas actividades deportivas, creativas o lúdicas adaptadas a la edad de cada uno. El programa incluye grandes juegos, talleres creativos, danza, canto y mucho más. Nuestros animadores se encargarán de que se los niños se lo pasen lo mejor posible!
@@ -44,6 +46,15 @@ Depends on what shops are around ...
 
         <h2>How many days will we stay?</h2>
 Three nights, four days
+
+        <h2>What should I bring??</h2>
+<ul>
+<li>Toothbrush</li>
+<li>Change of clothes</li>
+<li>Swimsuit</li>
+<li>A book to read</li>
+<li>A game to play with the family</li>
+</ul>
 
         <img src="images/vacation.png">
     <main>
