--- a/vacation/index.html
+++ b/vacation/index.html
@@ -12,6 +12,7 @@
 <style>
  body {
   text-align: center;
+  max-width: 400px;
 }
 </style>
 
@@ -55,7 +56,8 @@ Three nights, four days
 <li>A book to read</li>
 <li>A game to play with the family</li>
 </ul>
-
+	    
+<br><br><br>
         <img src="images/vacation.png">
     <main>
 </body>
