--- a/vacation/index.html
+++ b/vacation/index.html
@@ -11,8 +11,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <style>
  body {
-  text-align: center;
   max-width: 400px;
+}
+main {
+  text-align: center;
 }
 img {
   width: 100%;
