--- a/vacation/index.html
+++ b/vacation/index.html
@@ -11,9 +11,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <style>
  body {
+  text-align: center;
   max-width: 400px;
+	 margin: auto;
 }
 main {
+  max-width: 400px;
   text-align: center;
 }
 img {
@@ -64,6 +67,6 @@ Three nights, four days
 	    
 <br><br><br>
         <img src="images/vacation.png">
-    <main>
+    </main>
 </body>
 </html>
