--- a/index.html
+++ b/index.html
@@ -130,9 +130,9 @@
             <h2>ZEN Garden</h2>
             <h3>WDD 331R: Advanced CSS</h3>
             <div class="site-plan">
-                <a href="desktop_wireframe.pdf">Desktop Wireframe</a> 
+                <a href="wdd331/desktop_wireframe.pdf">Desktop Wireframe</a> 
                 | 
-                <a href="mobile_wireframe.pdf">Mobile Wireframe</a>
+                <a href="wdd331/mobile_wireframe.pdf">Mobile Wireframe</a>
             </div>            
             <div class="screenshot">
                 <a href="https://blackadder-git.github.io/byui/wdd331/"><img src="screenshots/advancedcss600.png" alt="Screenshot of zen garden written for advanced css"></a>
