--- a/treasure/index.html
+++ b/treasure/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CIT360 Self-Reflective Journal Report</title>
+    <title>Treasure Hunt 2023</title>
     <meta name="description" content="Metacognitive reflective journal report">
     <link rel="shortcut icon" href="../favicon.ico">
     <link rel="apple-touch-icon" href="../apple-touch-icon.png">
